--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@catppuccin/palette": "^1.7.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
