--- a/.forgejo/workflows/deploy.yml
+++ b/.forgejo/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: debian-unprivileged-runner
+    runs-on: docker
     steps:
       - uses: actions/checkout@v3
       - uses: oven-sh/setup-bun@v2
