--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"gray-matter": "^4.0.3",
 		"highlight.js": "^11.11.1",
 		"markdown-it": "^14.1.0",
+		"ngrok": "^5.0.0-beta.2",
 		"pinia": "^2.3.0",
 		"vue": "^3.5.13",
 		"vue-router": "^4.5.0"
