--- a/package.json
+++ b/package.json
@@ -1,53 +1,35 @@
 {
-	"name": "www",
-	"version": "0.0.0",
-	"private": true,
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "bun scripts/build-info.ts && run-p type-check \"build-only {@}\" --",
-		"preview": "vite preview",
-		"build-only": "bun scripts/build-info.ts && vite build",
-		"type-check": "vue-tsc --build",
-		"lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
-		"lint:eslint": "eslint . --fix",
-		"lint": "run-s lint:*",
-		"format": "prettier --write src/"
-	},
-	"dependencies": {
-		"@catppuccin/palette": "^1.7.1",
-		"@fortawesome/fontawesome-svg-core": "^6.7.2",
-		"@fortawesome/free-brands-svg-icons": "^6.7.2",
-		"@fortawesome/free-solid-svg-icons": "^6.7.2",
-		"@fortawesome/vue-fontawesome": "^3.0.8",
-		"@types/markdown-it": "^14.1.2",
-		"@vueuse/core": "^12.4.0",
-		"gray-matter": "^4.0.3",
-		"highlight.js": "^11.11.1",
-		"markdown-it": "^14.1.0",
-		"ngrok": "^5.0.0-beta.2",
-		"pinia": "^2.3.0",
-		"vue": "^3.5.13",
-		"vue-router": "^4.5.0"
-	},
-	"devDependencies": {
-		"@tsconfig/node22": "^22.0.0",
-		"@types/node": "^22.10.2",
-		"@vitejs/plugin-vue": "^5.2.1",
-		"@vitejs/plugin-vue-jsx": "^4.1.1",
-		"@vue/eslint-config-prettier": "^10.1.0",
-		"@vue/eslint-config-typescript": "^14.1.3",
-		"@vue/tsconfig": "^0.7.0",
-		"eslint": "^9.14.0",
-		"eslint-plugin-oxlint": "^0.11.0",
-		"eslint-plugin-vue": "^9.30.0",
-		"npm-run-all2": "^7.0.1",
-		"oxlint": "^0.11.0",
-		"prettier": "^3.3.3",
-		"sass-embedded": "^1.83.0",
-		"typescript": "~5.6.3",
-		"vite": "^6.0.5",
-		"vite-plugin-vue-devtools": "^7.6.8",
-		"vue-tsc": "^2.1.10"
-	}
+  "name": "www",
+  "version": "1.0.0",
+  "devDependencies": {
+    "@tsconfig/node22": "^22.0.0",
+    "@types/bun": "latest",
+    "@types/node": "^22.10.2",
+    "eslint": "^9.21.0",
+    "eslint-plugin-oxlint": "^0.15.13",
+    "eslint-plugin-vue": "^9.30.0",
+    "jiti": "^2.4.2",
+    "npm-run-all2": "^7.0.2",
+    "oxlint": "^0.15.13",
+    "prettier": "3.5.3",
+    "typescript": "~5.6.3"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  },
+  "private": true,
+  "scripts": {
+    "dev:api": "cd packages/api && bun run dev",
+    "dev:www": "cd packages/www && bun run dev",
+    "dev": "run-p dev:api dev:www",
+    "start": "cd packages/api && bun run start",
+    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
+    "lint:eslint": "eslint . --fix",
+    "lint": "run-s lint:*",
+    "format": "prettier --write --no-error-on-unmatched-pattern packages/**/src/**/*.{ts,tsx,vue}"
+  },
+  "workspaces": [
+    "packages/*"
+  ],
+  "dependencies": {}
 }
