feat: proxy api requests, move build-info.ts to correct path

--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --config vite.dev.config.ts",
     "build": "bun scripts/build-info.ts && run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "bun scripts/build-info.ts && vite build",
