--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,12 +2,12 @@
   "name": "@web/api",
   "version": "1.0.50",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "@elysiajs/static": "latest",
-    "elysia": "latest"
+    "@elysiajs/static": "^1.2.0",
+    "@elysiajs/swagger": "^1.2.2",
+    "elysia": "^1.2.25"
   },
   "devDependencies": {
     "bun-types": "latest"
